# ZipEngine

./: CMakeLists.txt  README.md  TestZipEngine  ZipEngine  decompressed.txt  test_bitstream  test_compressor  test_crc32  test_decompressor  test_fileio  test_huffmancoding  test_lz77
include/: ZipEngine.h
include/ZipEngine/: BitStream.h  CRC32.h  Compressor.h  Decompressor.h  FileHeader.h  FileIO.h  HuffmanCoding.h  LZ77.h  ZipEngine.h
src/: main.cpp
src/algorithms/: CRC32.cpp  HuffmanCoding.cpp  LZ77.cpp
src/core/: Compressor.cpp  Decompressor.cpp  FileHeader.cpp  ZipEngine.cpp
src/util/: BitStream.cpp  FileIO.cpp
tests/integration/: TestZipEngine.cpp
tests/unit/: TestBitStream.cpp  TestCRC32.cpp  TestCompressor.cpp  TestDecompressor.cpp  TestFileIO.cpp  TestHuffmanCoding.cpp  TestLZ77.cpp
